--- a/partials/criancas/criancas-details.html
+++ b/partials/criancas/criancas-details.html
@@ -2,13 +2,205 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-4">
         <h2>{{tittle}}</h2>
-        <ol class="breadcrumb">
+        <!--<ol class="breadcrumb">
             <li>
                 <a href="index.html">This is</a>
             </li>
             <li class="active">
                 <strong>Breadcrumb</strong>
             </li>
-        </ol>
+        </ol>-->
+    </div>
+</div>
+<div class="row animated fadeInRight">
+    <div class="col-lg-4">
+        <div class="widget-head-color-box navy-bg p-lg text-center" style="background-color:white;">
+            <div class="m-b-md">
+                <div class="widget lazur-bg p-xl" style="text-align:left;">
+                    <img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
+                    <div>
+                        <span>100 Tweets</span> |
+                        <span>350 Following</span> |
+                        <span>610 Followers</span>
+                    </div>
+                    <h2>
+                        Janet Smith
+                    </h2>
+                    <ul class="list-unstyled m-t-md">
+                        <li>
+                            <span class="fa fa-envelope m-r-xs"></span>
+                            <label>Email:</label>
+                            mike@mail.com
+                        </li>
+                        <li>
+                            <span class="fa fa-home m-r-xs"></span>
+                            <label>Address:</label>
+                            Street 200, Avenue 10
+                        </li>
+                        <li>
+                            <span class="fa fa-phone m-r-xs"></span>
+                            <label>Contact:</label>
+                            (+121) 678 3462
+                        </li>
+                    </ul>
+                </div>
+                <div class="widget red-bg p-lg text-center">
+                    <div class="m-b-md">
+                        <i class="fa fa-bell fa-4x"></i>
+                        <h1 class="m-xs">47</h1>
+                        <h3 class="font-bold no-margins">
+                            Notification
+                        </h3>
+                        <small>We detect the error.</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="widget-text-box">
+            <h4 class="media-heading">Alex Smith</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="text-right">
+                <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
+                <a class="btn btn-xs btn-primary"><i class="fa fa-heart"></i> Love</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+                <h5>Activites</h5>
+                <div class="ibox-tools">
+                    <a class="collapse-link">
+                        <i class="fa fa-chevron-up"></i>
+                    </a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-wrench"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="#">Config option 1</a>
+                        </li>
+                        <li><a href="#">Config option 2</a>
+                        </li>
+                    </ul>
+                    <a class="close-link">
+                        <i class="fa fa-times"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="ibox-content">
+                <div>
+                    <div class="feed-activity-list">
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a1.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right text-navy">1m ago</small>
+                                <strong>Sandra Momot</strong> started following <strong>Monica Smith</strong>. <br>
+                                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+                                <div class="actions">
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
+                                    <a class="btn btn-xs btn-danger"><i class="fa fa-heart"></i> Love</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/profile.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">5m ago</small>
+                                <strong>Monica Smith</strong> posted a new blog. <br>
+                                <small class="text-muted">Today 5:60 pm - 12.06.2014</small>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a2.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">2h ago</small>
+                                <strong>Mark Johnson</strong> posted message on <strong>Monica Smith</strong> site. <br>
+                                <small class="text-muted">Today 2:10 pm - 12.06.2014</small>
+                                <div class="well">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                    Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                                </div>
+                                <div class="pull-right">
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-heart"></i> Love</a>
+                                    <a class="btn btn-xs btn-primary"><i class="fa fa-pencil"></i> Message</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a3.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">2h ago</small>
+                                <strong>Janet Rosowski</strong> add 1 photo on <strong>Monica Smith</strong>. <br>
+                                <small class="text-muted">2 days ago at 8:30am</small>
+                                <div class="photos">
+                                    <a target="_blank" href="http://24.media.tumblr.com/20a9c501846f50c1271210639987000f/tumblr_n4vje69pJm1st5lhmo1_1280.jpg"> <img alt="image" class="feed-photo" src="img/p1.jpg"></a>
+                                    <a target="_blank" href="http://37.media.tumblr.com/9afe602b3e624aff6681b0b51f5a062b/tumblr_n4ef69szs71st5lhmo1_1280.jpg"> <img alt="image" class="feed-photo" src="img/p3.jpg"></a>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a4.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right text-navy">5h ago</small>
+                                <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
+                                <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
+                                <div class="actions">
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-heart"></i> Love</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a5.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">2h ago</small>
+                                <strong>Kim Smith</strong> posted message on <strong>Monica Smith</strong> site. <br>
+                                <small class="text-muted">Yesterday 5:20 pm - 12.06.2014</small>
+                                <div class="well">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                    Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                                </div>
+                                <div class="pull-right">
+                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/profile.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">23h ago</small>
+                                <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
+                                <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
+                            </div>
+                        </div>
+                        <div class="feed-element">
+                            <a href="#" class="pull-left">
+                                <img alt="image" class="img-circle" src="img/a7.jpg">
+                            </a>
+                            <div class="media-body ">
+                                <small class="pull-right">46h ago</small>
+                                <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
+                                <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
