--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -79,7 +79,7 @@
         </div>
 
 <!-- Form Create and Edit Criancas -->
-<div class="modal inmodal fade" id="modalRegistarCrianca" tabindex="-1" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="modalRegistarCrianca" tabindex="-1" role="dialog"  aria-hidden="true" style="">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -87,14 +87,26 @@
                 <h4 class="modal-title">{{popupTittle}}</h4>
             </div>
             <div class="modal-body" style="background-color:#fff;">
-             	<div class="ibox-content">
+               <div class="modal-content">
+                    <div class="ibox-title" style="background-color:#9bb97f; color:white;">
+                        <h5>Dados da Criança</h5>
+                    </div>
+             	
                     <form class="form-horizontal" id="form_crianca">
-                        <div class="form-group"><label class="col-lg-3 control-label">Nome</label>
+                     <div class="form-group">
+                            <div class="col-lg-9">
+                               
+                            </div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Nome</label>
                             <div class="col-lg-9">
                             	<input type="text" placeholder="Nome" class="form-control" ng-model="crianca.nome"> 
                             </div>
                         </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Sexo</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Data Nascimento</label>
+                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="Data Nascimento" ng-model="crianca.dataNascimento" id="criancadataNascimento"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Sexo</label>
                             <div class="col-lg-9">
 	                            <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.sexo">
 					                <option value=""></option>
@@ -103,31 +115,13 @@
 					            </select>
 					        </div>
                         </div>
-                       	<div class="form-group"><label class="col-lg-3 control-label">Data Nascimento</label>
-                            <div class="col-lg-9"><input type="date" class="form-control" placeholder="Data Nascimento" ng-model="crianca.dataNascimento" id="criancadataNascimento"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Idade</label>
-                            <div class="col-lg-9"><input type="number" placeholder="Idade" readonly="" class="form-control" ng-model="crianca.idade"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Alcunha</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
                             <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.alcunha"></div>
                         </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Nº PMI</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Nº PMI</label>
                             <div class="col-lg-9"><input type="text" placeholder="Nº PMI" class="form-control" ng-model="crianca.numeroPMI"></div>
                         </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Propina</label>
-                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Nome Pai</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Nome Pai" class="form-control" ng-model="crianca.nomePai"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Nome Mãe</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Nome Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Encaregado Educação</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Encaregado Educação" class="form-control" ng-model="crianca.encaregadoEducacao"></div>
-                        </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Morada</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
                             <div class="col-lg-9">
                                 <select  class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.morada">
                                     <option value=""></option>
@@ -135,10 +129,16 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Data Inicio Jardim</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Propina</label>
+                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Idade</label>
+                            <div class="col-lg-9"><input type="number" placeholder="Idade" readonly="" class="form-control" ng-model="crianca.idade"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Data Inicio Jardim</label>
                             <div class="col-lg-9"><input type="date" class="form-control" placeholder="data Inicio Jardim" ng-model="crianca.dataInicioJardim"></div>
                         </div>
-                        <div class="form-group"><label class="col-lg-3 control-label">Estado</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Estado</label>
                             <div class="col-lg-9">
                                 <select class="chosen-select" style="width:350px; height:30px;" tabindex="2" ng-model="crianca.estado">
                                     <option value=""></option>
@@ -150,8 +150,69 @@
                         </div> 
                     </form>
                 </div>
+                <div class="ibox-title" style="">
+                       
+                    </div>
+                <div class="modal-content">
+                    <div class="ibox-title" style="background-color:#2f4050; color:white;">
+                        <h5>Dados do Pai</h5>
+                    </div>
+                    <div class="ibox-title" style="">
+                       
+                    </div>
+                    <form class="form-horizontal" id="">
+                        <div class="form-group"><label class="col-lg-2 control-label">Nome do Pai</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Nome do Pai" class="form-control" ng-model="crianca.nomePai"></div>
+                        </div>
+                         <div class="form-group"><label class="col-lg-2 control-label">Profissão do Pai</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão do Pai<" class="form-control" ng-model="crianca.nomePai"></div>
+                        </div>
+                         <div class="form-group"><label class="col-lg-2 control-label">Telefone</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.nomePai"></div>
+                        </div>
+                         <div class="form-group"><label class="col-lg-2 control-label">Movel</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Nome Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                    </form>
+                </div>
+                <div class="ibox-title" style="">
+                       
+                </div>
+                <div class="modal-content">
+                    <div class="ibox-title" style="background-color:#ab3436; color:white;">
+                        <h5>Dados da Mãe</h5>
+                    </div>
+                    <div class="ibox-title" style="">
+                       
+                    </div>
+                    <form class="form-horizontal" id="">
+                        <div class="form-group"><label class="col-lg-2 control-label">Nome da Mãe</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Profissão da Mãe</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Telefone</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Movel</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Morada" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
+                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.nomeMae"></div>
+                        </div>
+                    </form>
+                </div>
             </div>
-
             <div class="modal-footer">
                 <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
                 <button type="button" class="btn btn-primary" ng-click="criarCrianca(crianca)" ng-show="sizeCrianca.length==0">Registar</button>
