--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -77,7 +77,7 @@
         </div>
 
         </div>
-
+          
 <!-- Form Create and Edit Criancas -->
 <div class="modal inmodal fade" id="modalRegistarCrianca" tabindex="-1" role="dialog"  aria-hidden="true" style="">
     <div class="modal-dialog modal-lg">
@@ -93,11 +93,19 @@
                     </div>
              	
                     <form class="form-horizontal" id="form_crianca">
-                     <div class="form-group">
+                        <div class="form-group">
                             <div class="col-lg-9">
                                
                             </div>
                         </div>
+                         <div class="form-group"><label class="col-lg-2 control-label"></label>
+                            <label class="col-lg-2 control-label"></label><div class="col-lg-1"></div>
+                            <div id="profile-container" class="">
+                                <image id="profileImage" src="img/superHeroy.jpg" />
+                                <input id="imageUpload" type="file"  name="profile_photo" placeholder="Photo" required="" capture>  
+                            </div><label class="col-lg-1 control-label"></label><div class="col-lg-1"></div>
+                        </div>
+                        
                         <div class="form-group"><label class="col-lg-2 control-label">Nome</label>
                             <div class="col-lg-9">
                             	<input type="text" placeholder="Nome" class="form-control" ng-model="crianca.nome"> 
@@ -135,7 +143,12 @@
                         <div class="form-group"><label class="col-lg-2 control-label">Idade</label>
                             <div class="col-lg-9"><input type="number" placeholder="Idade" readonly="" class="form-control" ng-model="crianca.idade"></div>
                         </div>
-                        <div class="form-group"><label class="col-lg-2 control-label">Data Inicio Jardim</label>
+                        <div class="form-group"><label class="col-lg-2 control-label">Periodo</label>
+                            <label class="col-lg-2 control-label">Manhã</label><div class="col-lg-1"><input type="checkbox"></div>
+                            <label class="col-lg-1 control-label">Tarde</label><div class="col-lg-1"><input type="checkbox"></div>
+                            <label class="col-lg-1 control-label">Almoço</label><div class="col-lg-1"><input type="text"></div>
+                        </div>
+                        <div class="form-group"><label class="col-lg-2 control-label">Data Inicio</label>
                             <div class="col-lg-9"><input type="date" class="form-control" placeholder="data Inicio Jardim" ng-model="crianca.dataInicioJardim"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Estado</label>
@@ -165,7 +178,7 @@
                             <div class="col-lg-9"><input type="text" placeholder="Nome do Pai" class="form-control" ng-model="crianca.nomePai"></div>
                         </div>
                          <div class="form-group"><label class="col-lg-2 control-label">Profissão do Pai</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Profissão do Pai<" class="form-control" ng-model="crianca.nomePai"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão do Pai" class="form-control" ng-model="crianca.nomePai"></div>
                         </div>
                          <div class="form-group"><label class="col-lg-2 control-label">Telefone</label>
                             <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.nomePai"></div>
@@ -193,7 +206,7 @@
                     </div>
                     <form class="form-horizontal" id="">
                         <div class="form-group"><label class="col-lg-2 control-label">Nome da Mãe</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Nome da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Profissão da Mãe</label>
                             <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
