change crianca revision34ttttttio9

--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -178,19 +178,19 @@
                             <div class="col-lg-9"><input type="text" placeholder="Nome do Pai" class="form-control" ng-model="crianca.nomePai"></div>
                         </div>
                          <div class="form-group"><label class="col-lg-2 control-label">Profissão do Pai</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Profissão do Pai" class="form-control" ng-model="crianca.nomePai"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão do Pai" class="form-control" ng-model="crianca.profissaoPai"></div>
                         </div>
                          <div class="form-group"><label class="col-lg-2 control-label">Telefone</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.nomePai"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.telefonePai"></div>
                         </div>
                          <div class="form-group"><label class="col-lg-2 control-label">Movel</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.movelPai"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Nome Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Nome Mãe" class="form-control" ng-model="crianca.moradaPai"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.alcunhaPai"></div>
                         </div>
                     </form>
                 </div>
@@ -209,19 +209,19 @@
                             <div class="col-lg-9"><input type="text" placeholder="Nome da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Profissão da Mãe</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Profissão da Mãe" class="form-control" ng-model="crianca.profissaoMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Telefone</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Telefone" class="form-control" ng-model="crianca.telefoneMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Movel</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Movel" class="form-control" ng-model="crianca.movelMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Morada</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Morada" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Morada" class="form-control" ng-model="crianca.moradaMae"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Alcunha</label>
-                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.nomeMae"></div>
+                            <div class="col-lg-9"><input type="text" placeholder="Alcunha" class="form-control" ng-model="crianca.alcunhaMae"></div>
                         </div>
                     </form>
                 </div>
