--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -153,7 +153,7 @@
                             <div class="col-lg-9">
                                 <label class="col-lg-2 control-label">Francês</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.linguaFrancesa"></div>
                                 <label class="col-lg-1 control-label">Inglês</label><div class="col-lg-1"><input type="checkbox" ng-model="crianca.linguaInglesa"></div>
-                                <label class="col-lg-2 control-label">Almoço</label><div class="col-lg-2"><input type="number"   ng-model="crianca.almoco" value="0"></div>
+                                <label class="col-lg-2 control-label">Almoço</label><div class="col-lg-2"><input type="number"   ng-model="crianca.almoco" value=""></div>
                            </div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Data Inicio</label>
