--- a/partials/criancas/criancas-details.html
+++ b/partials/criancas/criancas-details.html
@@ -17,15 +17,22 @@
         <div class="widget-head-color-box navy-bg p-lg text-center" style="background-color:white;">
             <div class="m-b-md">
                 <div class="widget lazur-bg p-xl" style="text-align:left;">
-                    <img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
+                    <div id="profile-container" class="">
+                        <image id="profileImage" src="img/superHeroy.jpg" class="img-circle circle-border m-b-md"/>
+                        <input id="imageUpload" type="file"  name="profile_photo" placeholder="Photo" required="" capture>
+                    </div><label class="col-lg-1 control-label"></label><div class="col-lg-1"></div>
+                   <div class="" style="margin-top:2vh;">
+                           
+                        </div>
+                    
                     <div>
-                        <span>100 Tweets</span> |
-                        <span>350 Following</span> |
-                        <span>610 Followers</span>
+                        <span>Pagamentos 10</span> |
+                        <span>Dividas 3</span> |
+                        <span>Estado Matriculado</span>
                     </div>
-                    <h2>
-                        Janet Smith
-                    </h2>
+                    <h3>
+                        {{crianca.nome}}
+                    </h3>
                     <ul class="list-unstyled m-t-md">
                         <li>
                             <span class="fa fa-envelope m-r-xs"></span>
@@ -34,13 +41,18 @@
                         </li>
                         <li>
                             <span class="fa fa-home m-r-xs"></span>
-                            <label>Address:</label>
-                            Street 200, Avenue 10
+                            <label>Morada:</label>
+                           {{crianca.morada}}
                         </li>
                         <li>
                             <span class="fa fa-phone m-r-xs"></span>
                             <label>Contact:</label>
                             (+121) 678 3462
+                        </li>
+                        <li>
+                            <span class="fa fa-phone m-r-xs"></span>
+                            <label>Aniversário:</label>
+                           {{crianca.dataNascimento}}
                         </li>
                     </ul>
                 </div>
@@ -95,42 +107,20 @@
                                 <img alt="image" class="img-circle" src="img/a1.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right text-navy">1m ago</small>
-                                <strong>Sandra Momot</strong> started following <strong>Monica Smith</strong>. <br>
-                                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
-                                <div class="actions">
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
-                                    <a class="btn btn-xs btn-danger"><i class="fa fa-heart"></i> Love</a>
-                                </div>
+                               
                             </div>
                         </div>
                         <div class="feed-element">
                             <a href="#" class="pull-left">
-                                <img alt="image" class="img-circle" src="img/profile.jpg">
+                                <img alt="image" class="img-circle" src="img/a1.jpg">
                             </a>
-                            <div class="media-body ">
-                                <small class="pull-right">5m ago</small>
-                                <strong>Monica Smith</strong> posted a new blog. <br>
-                                <small class="text-muted">Today 5:60 pm - 12.06.2014</small>
-                            </div>
                         </div>
                         <div class="feed-element">
                             <a href="#" class="pull-left">
                                 <img alt="image" class="img-circle" src="img/a2.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right">2h ago</small>
-                                <strong>Mark Johnson</strong> posted message on <strong>Monica Smith</strong> site. <br>
-                                <small class="text-muted">Today 2:10 pm - 12.06.2014</small>
-                                <div class="well">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                    Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                                </div>
-                                <div class="pull-right">
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-heart"></i> Love</a>
-                                    <a class="btn btn-xs btn-primary"><i class="fa fa-pencil"></i> Message</a>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="feed-element">
@@ -138,13 +128,7 @@
                                 <img alt="image" class="img-circle" src="img/a3.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right">2h ago</small>
-                                <strong>Janet Rosowski</strong> add 1 photo on <strong>Monica Smith</strong>. <br>
-                                <small class="text-muted">2 days ago at 8:30am</small>
-                                <div class="photos">
-                                    <a target="_blank" href="http://24.media.tumblr.com/20a9c501846f50c1271210639987000f/tumblr_n4vje69pJm1st5lhmo1_1280.jpg"> <img alt="image" class="feed-photo" src="img/p1.jpg"></a>
-                                    <a target="_blank" href="http://37.media.tumblr.com/9afe602b3e624aff6681b0b51f5a062b/tumblr_n4ef69szs71st5lhmo1_1280.jpg"> <img alt="image" class="feed-photo" src="img/p3.jpg"></a>
-                                    </div>
+                                
                             </div>
                         </div>
                         <div class="feed-element">
@@ -152,13 +136,7 @@
                                 <img alt="image" class="img-circle" src="img/a4.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right text-navy">5h ago</small>
-                                <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
-                                <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                <div class="actions">
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-heart"></i> Love</a>
-                                </div>
+                             
                             </div>
                         </div>
                         <div class="feed-element">
@@ -166,16 +144,7 @@
                                 <img alt="image" class="img-circle" src="img/a5.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right">2h ago</small>
-                                <strong>Kim Smith</strong> posted message on <strong>Monica Smith</strong> site. <br>
-                                <small class="text-muted">Yesterday 5:20 pm - 12.06.2014</small>
-                                <div class="well">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                    Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                                </div>
-                                <div class="pull-right">
-                                    <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-up"></i> Like </a>
-                                </div>
+                               
                             </div>
                         </div>
                         <div class="feed-element">
@@ -183,9 +152,7 @@
                                 <img alt="image" class="img-circle" src="img/profile.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right">23h ago</small>
-                                <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-                                <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
+                               
                             </div>
                         </div>
                         <div class="feed-element">
@@ -193,9 +160,7 @@
                                 <img alt="image" class="img-circle" src="img/a7.jpg">
                             </a>
                             <div class="media-body ">
-                                <small class="pull-right">46h ago</small>
-                                <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
-                                <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
+                               
                             </div>
                         </div>
                     </div>
