--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -14,7 +14,6 @@
             </li>-->
         </ol>
     </div>
-    
 </div>
 
 <!-- Table applay Criancas -->
@@ -232,7 +231,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
-                            <button type="button" class="btn btn-primary" ng-click="criarCrianca(crianca)" ng-show="sizeCrianca.length==0" ng-disabled="form_crianca.$invalid">Registar</button>
+                            <button type="button" class="btn btn-primary" ng-click="criarCrianca(crianca)" ng-show="sizeCrianca.length==0">Registar</button>
                             <button type="button" class="btn btn-primary" ng-click="editarCrianca(crianca)" ng-show="sizeCrianca.length>0" >Editar</button>
                             <button type="button" class="btn btn-danger"  ng-click="eliminarCrianca(crianca.idCrianca)" ng-show="sizeCrianca.length>0" data-toggle="modal" data-target="#myModalEliminar"><span>Eliminar</span></button>
                             
