--- a/partials/home/home.html
+++ b/partials/home/home.html
@@ -1,2 +1,131 @@
-<h1>Jardim Escolinha Encanto</h1>
-<h1>Em Actualizaão</h1>
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-12">
+        <h4>{{tittle}}</h4>
+        <ol class="breadcrumb" style="text-align: right;">
+            <li>
+                <div class="text-center">
+			       
+    			</div>
+            </li>
+           <!-- <li class="active">
+                <strong>Breadcrumb</strong>
+            </li>-->
+        </ol>
+    </div>
+</div>
+<div class="wrapper wrapper-content">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div> 
+        <div class="col-md-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>Views</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">386,200</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total views</small>
+                </div>
+            </div>
+        </div> 
+    	<div class="col-lg-4">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                   	<div>
+						<div id="chart-container6">FusionCharts will render here</div>
+					</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                   	<div>
+						<div id="chart-container9">FusionCharts will render here</div>
+					</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                   	<div>
+						<div id="chartContainer3">FusionCharts will render here</div>
+					</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
