--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -177,13 +177,13 @@
                             </div>
                         </div> 
                         <div class="form-group"><label class="col-lg-2 control-label">Propina</label>
-                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina" ng-required="true" value="0"></div>
+                            <div class="col-lg-9"><input type="number" placeholder="Propina" class="form-control" ng-model="crianca.propina" ng-required="true"></div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Francês</label>
                             <div class="col-lg-9">
-                                <div class="col-lg-3"><input type="number" ng-model="crianca.linguaFrancesa" value="0"></div>
-                                <label class="col-lg-1 control-label">Inglês</label><div class="col-lg-3"><input type="number" ng-model="crianca.linguaInglesa" value="0"></div>
-                                <label class="col-lg-2 control-label">Almoço</label><div class="col-lg-3"><input type="number"   ng-model="crianca.almoco" value="0"></div>
+                                <div class="col-lg-3"><input type="number" ng-model="crianca.linguaFrancesa"></div>
+                                <label class="col-lg-1 control-label">Inglês</label><div class="col-lg-3"><input type="number" ng-model="crianca.linguaInglesa"></div>
+                                <label class="col-lg-2 control-label">Almoço</label><div class="col-lg-3"><input type="number"   ng-model="crianca.almoco" value=""></div>
                            </div>
                         </div>
                         <div class="form-group"><label class="col-lg-2 control-label">Data Inicio</label>
