--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -394,7 +394,7 @@
 
                                     <div class="text-right" ng-show="total != 0">
                                         <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="cancelarCrianca()">Cancelar</button>
-                                        <button class="btn btn-primary" ng-disabled="false" ng-click="efetuarPagamento()"><i class=""></i> Efetuar Pagamento</button>
+                                        <button class="btn btn-primary" id="loading-example-btn" ng-disabled="false" ng-click="efetuarPagamento()"><i class="fa fa-refresh"></i> Efetuar Pagamento</button>
                                     </div>
                                      
                                 </div>
